<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptFragment"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_receipt"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/text_border"
        android:fillViewport="false"
        android:id="@+id/ingredients_scroll">

        <TextView
            android:id="@+id/receipt_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/hello_blank_fragment"
            android:textColor="@color/textColor" />

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_step" />

</LinearLayout>