...

                <ImageView
                    android:id="@+id/image_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/exoplayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </FrameLayout>

...
